# landcover-survey

./: .gitignore  README.md  index.html  pyproject.toml
.claude/: settings.json
alphaearth/: README.md  classify_parcels.py
assets/: ch-map.gen.js
css/: styles.css  tokens.css
dashboard/: README.md  SURVEY_PRIORITIZATION.md  index.html
dashboard/css/: styles.css  tokens.css
dashboard/js/: ch-map.js  dashboard.js
data/: Liegenschaften.csv  example.csv  example_landcover_20260312_203038.csv  example_landcover_20260313_102524.csv  example_landcover_20260323_155011.csv  example_landcover_20260323_155709.csv  example_landcover_20260323_161723.csv  example_landcover_20260323_170840.csv  example_parcels_20260313_102524.csv  example_parcels_20260323_155011.csv  example_parcels_20260323_155709.csv  example_parcels_20260323_161723.csv  example_parcels_20260323_170840.csv  test_data_parcels_20260312_203038.csv
docs/: ARCHITECTURE.md  CLASSIFICATION.md  DATA-SOURCES.md  DATAMODEL.md  MANUAL.md  README.md  REQUIREMENTS.md  RESEARCH-LANDCOVER.md  RESEARCH-NATURNAH.md  SPECIFICATION.md
fme/: Landcover Survey FME.fmw  README.md
js/: config.js  export.js  i18n.js  main.js  map.js  panel.js  processor.js  search.js  swisstopo.js  table.js  upload.js
python/: README.md  TODO.md  api.py  bauzonen.py  classify_web.py  cli.py  compare.py  config.py  data_io.py  export_web.py  geom_wgs84.py  geometry.py  habitat.py  main.py  pipeline.py  processor_web.py  swisstopo.py  user_input.py
scripts/: README.md  join_sap_measurements.py
web/: README.md  index.html  xcheck.html
(+16 files in other folders)
