[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landcover-survey"
version = "0.1.0"
description = "Aggregate land cover usage (m²) per Swiss cadastral parcel from AV survey data."
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14",
    "pandas>=2.0",
    "shapely>=2.0",
]

[tool.setuptools.packages.find]
where = ["python"]

[project.scripts]
landcover-survey = "landcover_survey.cli:main"
